--- a/link.html
+++ b/link.html
@@ -2,13 +2,14 @@
   <head>
     <meta charset="utf-8" />
     <title>Linked Site</title>
+      <link rel="stylesheet" href="css/master.css">
   </head>
   <body>
     <p>
       This site belongs to Anand Sinha
       <br />Anand Sinha:9910654115
     </p>
-    <form enctype="text/plain" action="mailto:dnanasept13@gmail.com" method="post ">
+    <form enctype="text/plain" action="mailto:dnanasept13@gmail.com" method="post">
       <label>Name:</label>
         <input type="text" name="name" value="eg. Anand Sinha">
         <br /><br />
@@ -22,7 +23,10 @@
       <br />
       <textarea name="more_details" rows="5" cols="20"></textarea>
       <br />
-      <input type="submit" name="" value="Submit">
+      <center>
+
+        <input type="submit" name="" value="Submit">
+      </center>
     </form>
   </body>
 </html>
