--- a/link.html
+++ b/link.html
@@ -4,6 +4,12 @@
     <title>Linked Site</title>
       <link rel="stylesheet" href="css/master.css">
   </head>
+  <center>
+
+  <table>
+  <tr>
+    <td></td>
+    <td>
   <body>
     <p>
       This site belongs to Anand Sinha
@@ -26,4 +32,9 @@
 <input type="submit" name="" value="Submit">
     </form>
   </body>
+    </td>
+    <td></td>
+</tr>
+</table>
+</center>
 </html>
