--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <h1>This is level 1 heading</h1>
-  <table cellspacing="20" style="background-color: white;">
+  <table class="main" cellspacing="20" style="background-color: white;">
     <tr>
       <td> <img src="https://instagram.fdel8-1.fna.fbcdn.net/v/t51.2885-19/s150x150/90088724_197856494881225_4206016221197369344_n.jpg?_nc_ht=instagram.fdel8-1.fna.fbcdn.net&_nc_ohc=z5GTep4MY3QAX9e95uf&oh=7e2508783bd9edcd9ef7e0fe8deefed5&oe=5EBA9312"
           alt="Anand's Profile Picture">
@@ -27,7 +27,7 @@
   <h2>Education</h2>
   <ol>
     <li>
-      <a href="http://www.ahlconpublicschool.com/">Ahlcon Public School</a>
+      <a class="a" href="http://www.ahlconpublicschool.com/">Ahlcon Public School</a>
     </li>
     <ul>
       <li>
@@ -67,7 +67,7 @@
   </table>
   <br />
   <hr size="1" noshade>
-  Click here to<a href="link.html"> <em><b>Contact Me</b></em></a> to the site
+  Click here to<a class="a" href="link.html"> <em><b>Contact Me</b></em></a> to the site
   </body>
 
 </html>
