--- a/link.html
+++ b/link.html
@@ -4,6 +4,10 @@
     <title>Linked Site</title>
       <link rel="stylesheet" href="css/master.css">
   </head>
+  <style>
+    background-color: rgba(70,70,70);
+    color:lightgray;
+    </style>
   <center>
 
   <table>
