--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <em>This the the bio of <b>Anand Sinha</b></em>
         </p>
         <p>
-          This is another para in the bio
+          I am a cool person.
         </p>
       </td>
     </tr>
@@ -31,7 +31,7 @@
     </li>
     <ul>
       <li>
-        From Nur-12
+        Got 10.0 CGPA in 10th class
       </li>
     </ul>
     <li>
@@ -39,7 +39,7 @@
     </li>
     <ul>
       <li>
-        Under graduate
+        Under graduate CGPA 9.0
       </li>
     </ul>
   </ol>
